--- a/arsha.html
+++ b/arsha.html
@@ -26,6 +26,8 @@
   </head>
 
   <body>
+    <!-- navbar section -->
+
     <div class="container-fluid front">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
@@ -52,7 +54,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Anout</a>
+                  <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Services</a>
@@ -132,6 +134,7 @@
         crossorigin="anonymous"
       ></script>
     </div>
+
     <div class="container-fluid bg-light p-xl-4 p-3">
       <div class="container">
         <div class="row">
@@ -978,7 +981,472 @@
           <i class="text-info fs-bold bi bi-quote quote-icon-right"></i>
         </p>
       </div>
+      <div class="swiper-pagination"></div>
     </div>
+
+    <!-- frequently ask question -->
+
+    <div class="container-fluid bg-light p-xl-5 p-3">
+      <div class="container">
+        <div class="max-content">
+          <h2 class="text-center text-blue text-uppercase fw-bold my-3">
+            Frequently Ask Question
+          </h2>
+          <div class="gray">
+            <div class="blue"></div>
+          </div>
+        </div>
+
+        <p class="text-secondary text-center my-3">
+          Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
+          aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
+          quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
+          fugiat sit in iste officiis commodi quidem hic quas.
+        </p>
+        <div
+          class="accordion d-flex flex-column gap-3 justify-content-center"
+          id="accordionExample"
+        >
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseone"
+                aria-expanded="false"
+                aria-controls="collapseOne"
+              >
+                <i class="bi bi-question-circle text-info mx-2"></i>
+                Non consectetur a erat nam at lectus urna duis?
+              </button>
+            </h2>
+            <div
+              id="collapseOne"
+              class="accordion-collapse collapse show"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                <strong>This is the first item's accordion body.</strong> It is
+                shown by default, until the collapse plugin adds the appropriate
+                classes that we use to style each element. These classes control
+                the overall appearance, as well as the showing and hiding via
+                CSS transitions. You can modify any of this with custom CSS or
+                overriding our default variables. It's also worth noting that
+                just about any HTML can go within the
+                <code>.accordion-body</code>, though the transition does limit
+                overflow.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapsetwo"
+                aria-expanded="false"
+                aria-controls="collapseTwo"
+              >
+                <i class="bi bi-question-circle text-info mx-2"></i>
+
+                Feugiat scelerisque varius morbi enim nunc faucibus a
+                pellentesque?
+              </button>
+            </h2>
+            <div
+              id="collapseTwo"
+              class="accordion-collapse collapse"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                <strong>This is the second item's accordion body.</strong> It is
+                hidden by default, until the collapse plugin adds the
+                appropriate classes that we use to style each element. These
+                classes control the overall appearance, as well as the showing
+                and hiding via CSS transitions. You can modify any of this with
+                custom CSS or overriding our default variables. It's also worth
+                noting that just about any HTML can go within the
+                <code>.accordion-body</code>, though the transition does limit
+                overflow.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseThree"
+                aria-expanded="false"
+                aria-controls="collapseThree"
+              >
+                <i class="bi bi-question-circle text-info mx-2"></i>
+                Dolor sit amet consectetur adipiscing elit pellentesque?
+              </button>
+            </h2>
+            <div
+              id="collapseThree"
+              class="accordion-collapse collapse"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                <strong>This is the third item's accordion body.</strong> It is
+                hidden by default, until the collapse plugin adds the
+                appropriate classes that we use to style each element. These
+                classes control the overall appearance, as well as the showing
+                and hiding via CSS transitions. You can modify any of this with
+                custom CSS or overriding our default variables. It's also worth
+                noting that just about any HTML can go within the
+                <code>.accordion-body</code>, though the transition does limit
+                overflow.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapse"
+                aria-expanded="false"
+                aria-controls="collapse"
+              >
+                <i class="bi bi-question-circle text-info mx-2"></i>
+
+                Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?
+              </button>
+            </h2>
+            <div
+              id="collapseThree"
+              class="accordion-collapse collapse"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                <strong>This is the third item's accordion body.</strong> It is
+                hidden by default, until the collapse plugin adds the
+                appropriate classes that we use to style each element. These
+                classes control the overall appearance, as well as the showing
+                and hiding via CSS transitions. You can modify any of this with
+                custom CSS or overriding our default variables. It's also worth
+                noting that just about any HTML can go within the
+                <code>.accordion-body</code>, though the transition does limit
+                overflow.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseThree"
+                aria-expanded="false"
+                aria-controls="collapseThree"
+              >
+                <i class="bi bi-question-circle text-info mx-2"></i>
+                Non consectetur a erat nam at lectus urna duis?
+              </button>
+            </h2>
+            <div
+              id="collapseThree"
+              class="accordion-collapse collapse"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                <strong>This is the third item's accordion body.</strong> It is
+                hidden by default, until the collapse plugin adds the
+                appropriate classes that we use to style each element. These
+                classes control the overall appearance, as well as the showing
+                and hiding via CSS transitions. You can modify any of this with
+                custom CSS or overriding our default variables. It's also worth
+                noting that just about any HTML can go within the
+                <code>.accordion-body</code>, though the transition does limit
+                overflow.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- contact section -->
+
+    <div class="container-fluid bg-white">
+      <div class="container p-3">
+        <div class="max-content">
+          <h2 class="text-center text-blue text-uppercase fw-bold my-3">
+            Contact
+          </h2>
+          <div class="gray">
+            <div class="blue"></div>
+          </div>
+        </div>
+
+        <p class="text-secondary text-center my-3">
+          Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
+          aliquid fuga
+        </p>
+
+        <div class="row justify-content-around">
+          <div
+            class="card col-lg-4 border-4 border-info border-start-0 border-end-0 shadow my-3"
+          >
+            <div class="info-wrap p-3 bg-white">
+              <div
+                class="info-item d-flex gap-2"
+                data-aos="fade-up"
+                data-aos-delay="200"
+              >
+                <i class="bi bi-geo-alt flex-shrink-0"></i>
+                <div>
+                  <h5>Address</h5>
+                  <p>Gilgit Baltistan</p>
+                </div>
+              </div>
+
+              <div
+                class="info-item d-flex gap-2"
+                data-aos="fade-up"
+                data-aos-delay="300"
+              >
+                <i class="bi bi-telephone flex-shrink-0"></i>
+                <div>
+                  <h5>Call Us</h5>
+                  <p>+92 3452314877</p>
+                </div>
+              </div>
+              <!-- End Info Item -->
+
+              <div
+                class="info-item d-flex gap-2"
+                data-aos="fade-up"
+                data-aos-delay="400"
+              >
+                <i class="bi bi-envelope flex-shrink-0"></i>
+                <div>
+                  <h5>Email Us</h5>
+                  <p>
+                    <a
+                      href="/cdn-cgi/l/email-protection"
+                      class="__cf_email__"
+                      data-cfemail="a1c8cfc7cee1c4d9c0ccd1cdc48fc2cecc"
+                      >[email&#160;someone]</a
+                    >
+                  </p>
+                </div>
+              </div>
+              <!-- End Info Item -->
+
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6666.0289276022795!2d76.50964402261278!3d35.88008249266337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38fad5add7ff4adb%3A0xc531647bf8e9d577!2sK2!5e0!3m2!1sen!2s!4v1734244804382!5m2!1sen!2s"
+                width="100%"
+                class=""
+                height="300"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </div>
+
+          <div
+            class="card col-lg-7 border-5 border-info border-start-0 border-end-0 my-4 shadow"
+          >
+            <form
+              action="forms/contact.php"
+              method="post"
+              class="php-email-form"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="row gy-1 p-3">
+                <div class="col-md-6">
+                  <label for="name-field" class="pb-2">Your Name</label>
+                  <input
+                    type="text"
+                    name="name"
+                    id="name-field"
+                    class="form-control"
+                    required=""
+                  />
+                </div>
+
+                <div class="col-md-6">
+                  <label for="email-field" class="pb-2">Your Email</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    name="email"
+                    id="email-field"
+                    required=""
+                  />
+                </div>
+
+                <div class="col-md-12">
+                  <label for="subject-field" class="pb-2">Subject</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="subject"
+                    id="subject-field"
+                    required=""
+                  />
+                </div>
+
+                <div class="col-md-12">
+                  <label for="message-field" class="pb-2">Message</label>
+                  <textarea
+                    class="form-control"
+                    name="message"
+                    rows="5"
+                    id="message-field"
+                    required=""
+                  ></textarea>
+                </div>
+
+                <div class="col-md-12 text-center">
+                  <button class="btn btn-info rounded-pill px-3 my-3">
+                    Send Message
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <!-- End Contact Form -->
+        </div>
+      </div>
+    </div>
+
+    <!-- Join Our Newsletter section -->
+
+    <div class="container-fluid bg-light p-xl-5 p-3">
+      <div class="container">
+        <h4 class="text-center text-blue text-uppercase fw-bold my-3">
+          Join Our Newsletter
+        </h4>
+
+        <p class="text-secondary text-center my-3">
+          Subscribe to our newsletter and receive the latest news about our
+          products and services!
+        </p>
+
+        <div class="d-flex mx-auto col-lg-6 position-relative col-md-8 p-3">
+          <input
+            type="text"
+            class="form-control rounded-pill border-1 shadow"
+          />
+          <button
+            class="btn btn-info text-white position-absolute end-0 rounded-pill px-3"
+          >
+            Subscribe
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- footer section -->
+
+    <div class="container">
+      <footer
+        class="row row-cols-1 justify-content-center align-items-center row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top"
+      >
+        <div class="col mb-3">
+          <a
+            href="/"
+            class="d-flex align-items-center link-body-emphasis text-decoration-none"
+          >
+            <svg class="bi me-2" width="40" height="32">
+              <use xlink:href="#bootstrap"></use>
+            </svg>
+          </a>
+          <h2 class="text-blue fw-bold">ARSHA</h2>
+          <p class="text-body-secondary">A108 Adam Street</p>
+          <p class="text-body-secondary">New York, NY 535022</p>
+          <p><span class="fw-bold text-dark">Phone:</span>+92 5589 55488</p>
+          <p class="py-0">
+            <span class="fw-bold text-dark">Email:</span>info@example.com
+          </p>
+        </div>
+
+        <div class="col mb-3"></div>
+
+        <div class="col mb-3">
+          <h5 class="text-blue">Useful Links</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Team</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col mb-3">
+          <h5 class="text-blue">Over services</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Features</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col mb-3">
+          <h5 class="text-blue">Follow us</h5>
+          <p>
+            Cras fermentum odio eu feugiat lide par naso tierra videa magna
+            derita valies
+          </p>
+          <div class="d-flex gap-2">
+            <div class="p-3 bg-light" style="clip-path: circle()">
+              <i class="bi bi-twitter-x"></i>
+            </div>
+            <div class="p-3 bg-light" style="clip-path: circle()">
+              <i class="bi bi-facebook"></i>
+            </div>
+            <div class="p-3 bg-light" style="clip-path: circle()">
+              <i class="bi bi-instagram"></i>
+            </div>
+            <div class="p-3 bg-light" style="clip-path: circle()">
+              <i class="bi bi-linkedin"></i>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <hr />
+      <p class="text-center">© Copyright Arsha All Rights Reserved</p>
+      <p class="text-center">
+        Designed by <a class="text-info">BootstrapMade</a>
+      </p>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
